// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should call onChange callback 1`] = `
<RadioGroup
  className=""
  direction="column"
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[MockFunction]}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="css-1klwfzq"
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv css-1klwfzq formElement"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              checked={false}
              className="css-gyrv08 input"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1hju4sd label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                className="css-1hju4sd label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should have on value at a time 1`] = `
<RadioGroup
  className=""
  direction="column"
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="css-1klwfzq"
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv css-1klwfzq formElement"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              checked={false}
              className="css-gyrv08 input"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1hju4sd label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                className="css-1hju4sd label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_bar/.1"
          label="bar"
          name="bar"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 bar radioItem"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              checked={false}
              className="css-gyrv08 input"
              name="bar"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1hju4sd label"
              params={Object {}}
              role={null}
              string="bar"
              transform={null}
            >
              <span
                className="css-1hju4sd label"
                role={null}
              >
                bar
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render column group with items 1`] = `
<RadioGroup
  className=""
  direction="column"
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="css-1klwfzq"
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv css-1klwfzq formElement"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              checked={false}
              className="css-gyrv08 input"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1hju4sd label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                className="css-1hju4sd label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render empty group 1`] = `
<RadioGroup
  className=""
  direction="column"
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="css-1klwfzq"
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv css-1klwfzq formElement"
    >
      <div
        className="css-1t62idy radioGroup"
      />
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render rows group with items 1`] = `
<RadioGroup
  className=""
  direction="rows"
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="css-1klwfzq"
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv css-1klwfzq formElement"
    >
      <div
        className="css-1gehsfr radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              checked={false}
              className="css-gyrv08 input"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1hju4sd label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                className="css-1hju4sd label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should use default value 1`] = `
<RadioGroup
  className=""
  direction="column"
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  translateErrorText={true}
  value="foo"
>
  <FormElement
    className="css-1klwfzq"
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv css-1klwfzq formElement"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={true}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
          >
            <RadioChecked
              className="css-1ncyhu css-pljilv checkedIcon"
            >
              <Icon
                className="css-1ncyhu css-pljilv checkedIcon"
                color={null}
                content="<path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-1ncyhu css-pljilv checkedIcon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioChecked>
            <input
              checked={true}
              className="css-gyrv08 input"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1hju4sd label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                className="css-1hju4sd label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;
